# paper_repro_eval

./: .gitignore  LICENSE  README.md  REVIEWING.md  pyproject.toml
authoring/: arena_reference.py  arena_verifier.py  calibrate_arenas.py  calibrate_interactive.py  control_verifier.py  smoke_arenas.py  smoke_tournament.py  trusted_poisson.py
capsules/: README.md  registry.yaml
docs/: ARCHITECTURE.md  ARENA_PROTOCOL.md  CALIBRATION.md  CAPSULES.md  CLI.md  COMPETITIONS.md  HUMAN_GUIDE.md  ISOLATION.md  RUNNING_AGENTS.md  TASK_CATALOG.md  VERIFIER_PROTOCOL.md  VISUAL_ARENAS.md  WORKFLOW.md
papers/: README.md  registry.yaml
papers/differentiable-world-model-mpc/: paper.yaml
papers/dm-control-suite/: paper.yaml
papers/evolutionary-soft-robots/: paper.yaml
papers/inverse-rendering/: paper.yaml
papers/lightcycle-agents/: paper.yaml
papers/mls-mpm/: paper.yaml
papers/multiple-importance-sampling/: paper.yaml
papers/multiple-importance-sampling/capsules/progressive-path-tracer/v1.0.0/public/starter/: CMakeLists.txt  README.md  render.sh  solve.py
papers/multiple-importance-sampling/capsules/progressive-path-tracer/v1.0.0/public/starter/src/: main.cpp
papers/poisson-image-editing/: paper.yaml
papers/stable-fluids/: paper.yaml
papers/synthetic-robust-estimation/: paper.yaml
src/paper_repro_eval/: __init__.py  (+20 more)
suites/: README.md  synthetic-smoke.yaml  visual-research-arcade-v0.yaml
tests/: conftest.py  test_arena_kit.py  test_arena_protocols.py  test_catalog_and_authoring.py  test_cli.py  test_competitions.py  test_documentation.py  test_handoff.py  test_lifecycle.py  test_materialize.py  test_models.py  test_tournament.py
(+184 files in other folders)
