[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "paper-repro-eval"
version = "0.1.0"
description = "A reusable framework for evaluating native coding assistants on verifiable paper-reproduction capsules."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "bleach>=6.2",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "rich>=13.9",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.120",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "types-bleach>=6.2",
  "types-pyyaml>=6.0",
  "ruff>=0.9",
]

[project.scripts]
paper_repro_eval = "paper_repro_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_repro_eval"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["paper_repro_eval"]

