cmake_minimum_required(VERSION 3.20)
project(visual_arena_starter LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(arena_demo src/main.cpp)
find_package(OpenGL QUIET)
if(OpenGL_FOUND)
  target_link_libraries(arena_demo PRIVATE OpenGL::GL)
  target_compile_definitions(arena_demo PRIVATE ARENA_HAS_OPENGL=1)
endif()
